--- a/Project 1/wiki/encyclopedia/templates/encyclopedia/layout.html
+++ b/Project 1/wiki/encyclopedia/templates/encyclopedia/layout.html
@@ -29,7 +29,7 @@
         <div>
           <a href="{% url 'index' %}">Home</a>
         </div>
-        <div>Create New Page</div>
+        <div><a href="{% url 'submit' %}">Create New Page</a></div>
         <div>
           <a href="{% url 'random' %}">Random Page</a>
         </div>
