--- a/Project 1/wiki/encyclopedia/templates/encyclopedia/results.html
+++ b/Project 1/wiki/encyclopedia/templates/encyclopedia/results.html
@@ -1,2 +1,8 @@
 {% extends "encyclopedia/layout.html" %} {% block title %} Search Results
 {%endblock %} {% block body %}
+<h1>Search Results</h1>
+
+<ul>
+  {}
+  <li></li>
+</ul>
